# Focus-List

./: .gitignore  .metadata  AGENTS.md  Cargo.toml  PROMPTS.md  README.md  instructions.txt  pubspec.yaml  tasks.json
.github/workflows/: release.yml
android/app/: build.gradle.kts
assets/themes/: 15-rose-night.json  17-rose-day.json  20-catppuccin-mocha.json  30-catppuccin-latte.json  40-oxocarbon.json  50-oxocarbon-light.json  60-tokyo-night.json  70-gruvbox.json  classic.json  gruvbox.json
docs/: implementation-roadmap.md
flutter-migration/: 01-current-program-specification.txt  02-flutter-migration-plan.txt
flutter_app/: README.md  pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/test/: widget_test.dart
lib/: main.dart
lib/app/: desktop_background.dart  desktop_background_base.dart  desktop_background_io.dart  desktop_background_stub.dart  focus_list_app.dart  theme_catalog.dart  ui_mode.dart  window_position_persistence.dart  window_position_persistence_base.dart  window_position_persistence_io.dart  window_position_persistence_stub.dart
lib/data/: local_repositories.dart  providers.dart
lib/domain/: models.dart  repositories.dart
lib/l10n/: AGENTS.md  app_en.arb  app_es.arb  app_es_419.arb  app_es_ES.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart
packaging/: tui-kanban-autostart.desktop.in  tui-kanban.desktop.in
scripts/: install-linux.sh  install-native.sh  tui-kanban-native-launcher
src/: app.rs  lib.rs  main.rs  model.rs  storage.rs  ui.rs
(+36 files in other folders)
